--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -51,7 +51,7 @@
             </div>
             <div class="user-acc col-auto">
               <a routerLink="/admin">Kênh admin</a>
-              <a href="login.html"><button type="button"  class="btn btn-none-bg btn-login">
+              <a routerLink="/login"><button type="button"  class="btn btn-none-bg btn-login">
                 <span class="font14">Đăng nhập</span>
               </button></a>
             </div>
