--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -50,7 +50,7 @@
               </div>
             </div>
             <div class="user-acc col-auto">
-              <a routerLink="/admin">Kênh admin</a>
+              <a class="user-acc-admin" routerLink="/admin">Kênh admin</a>
               <a routerLink="/login"><button type="button"  class="btn btn-none-bg btn-login">
                 <span class="font14">Đăng nhập</span>
               </button></a>
