--- a/src/app/admin/adminpage/adminpage.component.html
+++ b/src/app/admin/adminpage/adminpage.component.html
@@ -1,17 +1,172 @@
-<header class="navbar navbar-admin sticky-top flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Kênh Admin</a>
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-  <div class="navbar-nav">
-    <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" href="#">Sign out</a>
-    </div>
-  </div>
-</header>
 
-<div class="container-fluid">
+
+<!--<div class="container-fluid">-->
+<!--  <div class="row">-->
+<!--    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">-->
+<!--      <div class="position-sticky pt-3 sidebar-sticky">-->
+<!--        <ul class="nav flex-column">-->
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link active" aria-current="page" href="#">-->
+<!--              <span data-feather="home" class="align-text-bottom"></span>-->
+<!--              Dashboard-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link" routerLink="merchant-list">-->
+<!--              <span data-feather="file" class="align-text-bottom"></span>-->
+<!--              Quản lý người bán-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link" href="#">-->
+<!--              <span data-feather="shopping-cart" class="align-text-bottom"></span>-->
+<!--              Quản lý người dùng-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="nav-item">-->
+<!--            <a class="nav-link" href="#">-->
+<!--              <span data-feather="users" class="align-text-bottom"></span>-->
+<!--              Quản lý đơn vị vận chuyển-->
+<!--            </a>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--    </nav>-->
+
+<!--&lt;!&ndash;    <app-merchant-list class="col-md-9 ms-sm-auto col-lg-10 px-md-4"></app-merchant-list>&ndash;&gt;-->
+<!--   <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">-->
+<!--     <router-outlet></router-outlet>-->
+<!--   </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+
+
+
+
+
+
+
+
+    <header class="main-header">
+
+      <div class="container-header">
+        <div class="container">
+          <div class="header-content navbar row  justify-content-between align-items-center">
+            <div class="logo-now col-auto"><span><a href="index.html"><img
+              src="./assets/img/shopeefoodvn.png"
+              alt="ShopeeFood"></a></span></div>
+
+            <div class="main-nav col"><span>Kênh Admin</span></div>
+
+            <div class="language dropdown col-auto">
+              <div class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false"><img src="./assets/img/vi.png">
+              </div>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-item"><img src="./assets/img/en.png"><span
+                  class="font14">&nbsp;&nbsp;Tiếng Anh</span></div>
+                <div class="dropdown-item"><img src="./assets/img/vi.png"><span
+                  class="font14">&nbsp;&nbsp;Tiếng Việt</span></div>
+              </div>
+            </div>
+            <div class="user-acc col-auto">
+              <span>Admin</span>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade modal-search" id="modal-search" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content"><span class="close" data-dismiss="modal">x</span>
+            <div class="modal-search-form"><span class="sub-title">Đặt Đồ ăn, giao hàng từ 20'... có
+                                    37422 địa điểm ở Hà Nội từ 00:00 - 23:59</span>
+              <form><input class="search-input" name="search-input" type="text" autocomplete="off"
+                           value=""></form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade modal-new-app" id="modal-new-app" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content"><span class="close" data-dismiss="modal">x</span>
+            <div class="img-now"><img
+              src="/app/assets/img/img-new-app.png?2aafe2fa0d470c0d2fadada01c56a448"
+              alt="App now"></div>
+            <div class="info-now"><span>
+                                    <h3 style="font-size: 36px;font-weight: lighter;margin-bottom: 0;">Hello you!</h3>
+                                    <p style="font-size: 15px;margin-top: 9px;margin-bottom: 9px;">We are pleased to
+                                        inform you that our application<span class="bold"> ShopeeFood</span> is changed
+                                        its name to</p><span class="btn btn-red font18" title="ShopeeFood"
+                                                             style="cursor: pointer;font-size: 18px !important;background-color: #cf2127;color: #fff;border-color: #cf2127;"><span
+              class="txt-bold"
+              style="font-weight: 700 !important;">ShopeeFood</span></span>
+                                </span>
+              <p class="update-version">Cập nhật phiên bản mới</p>
+              <div class="down-apps"><a target="_blank" rel="noopener noreferrer"
+                                        href="https://itunes.apple.com/us/app/deliverynow/id1137866760" class="down-app"
+                                        title="App Store"><span class="icon icon-app-store-sm"></span></a><a
+                target="_blank" rel="noopener noreferrer"
+                href="https://play.google.com/store/apps/details?id=com.deliverynow"
+                class="down-app" title="Google play"><span
+                class="icon icon-gg-play-sm"></span></a></div>
+            </div>
+            <div class="box-now-merchant clearfix">
+              <div class="img-merchant">
+                <div class="float-left mar-right10"><span class="icon icon-merchant-lg"></span>
+                </div>
+                <div class="float-left"><a target="_blank" rel="noopener noreferrer"
+                                           href="https://itunes.apple.com/US/app/id1296706589?mt=8" class="down-apps"
+                                           title="App Store"><span class="icon icon-app-store-sm"></span></a><a
+                  target="_blank" rel="noopener noreferrer"
+                  href="https://play.google.com/store/apps/details?id=com.sea.foody.nowmerchant&amp;amp;hl=vi"
+                  class="down-apps" title="Google play"><span
+                  class="icon icon-gg-play-sm"></span></a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade modal-get-local" id="userLocationId" tabindex="-1" role="dialog"
+           data-backdrop="static" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content"><span class="close" data-dismiss="modal">x</span>
+            <div class="modal-header">Bạn muốn giao đến đâu?</div>
+            <div class="modal-body">
+              <div class="search-local">
+                <div class="primary-local">
+                  <div class="row align-items-center no-gutters">
+                    <div class="col-auto"><i class="icon icon-search-gray"></i></div>
+                    <div class="col"><input type="text" id="address" name="address"
+                                            placeholder="Nhập địa chỉ giao hàng" value=""></div>
+                    <div class="col-auto"><i class="icon icon-location"></i></div>
+                  </div>
+                </div>
+              </div>
+              <div class="list-local">
+                <div class="suggest-local">
+                  <div class="location-items"></div>
+                  <div class="find-map">
+                    <div class="row align-items-center no-gutters">
+                      <div class="col-auto"><i class="icon icon-thumbtack"></i></div>
+                      <div class="col pl-3"><span class="txt-blue link">Tìm trên bản đồ</span>
+                      </div>
+                      <div class="col-auto mr-3"><i class="icon-arrow-thin right"></i></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+
+
+
+<div class="now-container-coporation now-container-content">
   <div class="row">
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
       <div class="position-sticky pt-3 sidebar-sticky">
@@ -48,7 +203,118 @@
    <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
      <router-outlet></router-outlet>
    </div>
-
   </div>
 </div>
+
+
+
+    <div class="now-container-coporation" >
+      <p class="seo-footer-link__head">Danh mục</p>
+      <div class="seo-footer-link__body">
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Thuốc</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"><a
+            href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-hoa-my-pham-giao-tan-noi"
+            class="seo-footer-link__sub-item">Hoá mỹ phẩm</a><a
+            href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-bcs-giao-tan-noi"
+            class="seo-footer-link__sub-item">BCS</a><a
+            href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-thiet-bi-giao-tan-noi"
+            class="seo-footer-link__sub-item">Thiết bị</a><a
+            href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-thuoc-tay-giao-tan-noi"
+            class="seo-footer-link__sub-item">Thuốc tây</a><a
+            href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-khau-trang-giao-tan-noi"
+            class="seo-footer-link__sub-item">Khẩu trang</a><a
+            href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-khan-cap-giao-tan-noi"
+            class="seo-footer-link__sub-item">Khẩn cấp</a></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Thú cưng</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"><a
+            href="#"
+            class="seo-footer-link__sub-item">Thú cưng</a></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Đồ ăn HN</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"><a
+            href="#"
+            class="seo-footer-link__sub-item">Đồ ăn HN</a></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Đặt bàn HN</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Thực phẩm HN</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Sản phẩm HN</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="#">
+          <p class="seo-footer-link__title">Sản phẩm</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"><a
+            href="#"
+            class="seo-footer-link__sub-item">Mỹ phẩm</a><a
+            href="#"
+            class="seo-footer-link__sub-item">Đồ chơi</a><a
+            href="#"
+            class="seo-footer-link__sub-item">Sữa</a><a
+            href="#"
+            class="seo-footer-link__sub-item">Tã bỉm</a><a
+            href="#"
+            class="seo-footer-link__sub-item">Dụng cụ</a><a
+            href="#"
+            class="seo-footer-link__sub-item">Quần áo</a><a
+            href="https://shopeefood.vn/ha-noi/fmcg/danh-sach-dia-diem-phuc-vu-giay-dep-giao-tan-noi"
+            class="seo-footer-link__sub-item">Giày dép</a><a
+            href="https://shopeefood.vn/ha-noi/fmcg/danh-sach-dia-diem-phuc-vu-dien-tu-giao-tan-noi"
+            class="seo-footer-link__sub-item">Điện tử</a><a
+            href="https://shopeefood.vn/ha-noi/fmcg/danh-sach-dia-diem-phuc-vu-trang-suc-giao-tan-noi"
+            class="seo-footer-link__sub-item">Trang sức</a></ul>
+        </div>
+        <div class="seo-footer-link__item"><a href="https://shopeefood.vn/ha-noi/flowers">
+          <p class="seo-footer-link__title">Hoa</p>
+        </a>
+          <ul class="seo-footer-link__sub-item-wrapper"><a
+            href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-chia-buon-giao-tan-noi"
+            class="seo-footer-link__sub-item">Chia buồn</a><a
+            href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-cay-canh-giao-tan-noi"
+            class="seo-footer-link__sub-item">Cây cảnh</a><a
+            href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-chuc-mung-giao-tan-noi"
+            class="seo-footer-link__sub-item">Chúc mừng</a><a
+            href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-sinh-nhat-giao-tan-noi"
+            class="seo-footer-link__sub-item">Sinh nhật</a><a
+            href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-tinh-yeu-giao-tan-noi"
+            class="seo-footer-link__sub-item">Tình yêu</a></ul>
+        </div>
+      </div>
+    </div>
+    <div class="now-container-coporation" style="margin-top: 0px;">
+      <div class="container-inner">
+
+        <div class="block-last">
+          <p class="title-block">Địa chỉ công ty</p>
+          <span>
+                                <p>Công Ty Cổ Phần Foody</p>
+                                <p>Lầu G, Tòa nhà Jabes 1,</p>
+                                <p>số 244 đường Cống Quỳnh, phường Phạm Ngũ Lão, Quận 1, TPHCM</p>
+                                <p>Giấy CN ĐKDN số: 0311828036</p>
+                                <p>do Sở Kế hoạch và Đầu tư TP.HCM cấp ngày 11/6/2012,</p>
+                                <p>sửa đổi lần thứ 23, ngày 10/12/2020</p>
+                                <p>Số điện thoại: 1900 2042</p>
+                                <p>Email: <a href="mailto:support@shopeefood.vn"> support@shopeefood.vn</a></p>
+                            </span>
+        </div>
+      </div>
+    </div>
+    <hr>
+
 
