--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -104,9 +104,10 @@
               </div>
             </div>
             <div class="user-acc col-auto">
-              <button type="button" onclick="login()" class="btn btn-none-bg btn-login">
+              <a routerLink="/register/merchant">Đăng ký bán hàng</a>
+              <a routerLink="/login"><button type="button"  class="btn btn-none-bg btn-login">
                 <span class="font14">Đăng nhập</span>
-              </button>
+              </button></a>
             </div>
           </div>
         </div>
@@ -126,7 +127,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content"><span class="close" data-dismiss="modal">x</span>
             <div class="img-now"><img
-              src="/app/assets/img/img-new-app.png?2aafe2fa0d470c0d2fadada01c56a448"
+              src="#"
               alt="App now"></div>
             <div class="info-now"><span>
                                     <h3 style="font-size: 36px;font-weight: lighter;margin-bottom: 0;">Hello you!</h3>
@@ -217,21 +218,52 @@
         <p class="text">Hoặc đăng nhập bằng tài khoản của bạn</p>
 
 <!--        form login-->
+        <form class="login100-form validate-form" [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form-login-input">
           <div class="field-group">
-            <div class="input-group"><i class="far fa-envelope"></i><input type="text"
-                                                                           placeholder="Tên đăng nhập hoặc Email" value=""></div>
-            <div class="input-group"><i class="fas fa-lock"></i><input type="password" placeholder="Mật khẩu"
-                                                                       value=""></div>
+            <div class="input-group"><i class="far fa-envelope"></i><input class="input100" id="username" type="text" name="username" placeholder="username"
+                                                                           formControlName="userName">
+              <!--          <div class="wrap-input100 validate-input">-->
+              <!--            <input class="input100" id="username" type="text" name="username" placeholder="username"-->
+              <!--                   formControlName="username">-->
+              <!--            <span class="focus-input100"></span>-->
+              <!--            <span class="symbol-input100">-->
+              <!--							<i class="fa fa-id-card" aria-hidden="true"></i>-->
+              <!--						</span>-->
+              <!--          </div>-->
+<!--valid user-->
+            <div *ngIf="!username?.valid && username?.touched">
+              <div [hidden]="!username?.errors?.['required']">
+                <p style="color: red"> This field is required </p>
+              </div>
+            </div>
+
+            <div class="input-group"><i class="fas fa-lock"></i><input class="input100" type="password" name="pass" placeholder="Password" formControlName="password"></div>
+<!--              valid-->
+              <div *ngIf="!password?.valid && password?.touched">
+                <div [hidden]="!password?.errors?.['required']">
+                  <p style="color: red"> Password is required </p>
+                </div>
+                <div [hidden]="!password?.errors?.['minLength']">
+                  <p style="color: red"> Password need at least 6 words </p>
+                </div>
+                <div [hidden]="!password?.errors?.['minLength']">
+                  <p style="color: red"> First letter should be capitalized, number should in the end</p>
+                </div>
+              </div>
+            </div>
           </div>
+
           <div class="form-group clearfix">
             <div class="float-left"><input type="checkbox" id="RememberMe" checked=""><label for="RememberMe">Lưu
-              thông tin đăng nhập</label></div><span class="float-right"><a href="/forgotPassword">Quên mật
+              thông tin đăng nhập</label></div><span class="float-right"><a routerLink="/forgotPassword">Quên mật
                                     khẩu?</a></span>
           </div><button class="btn btn-block btn-submit">Đăng nhập</button>
+            {{message}}
           <a routerLink="/register" class="btn btn-block btn-dark">Đăng ký</a>
         </div><br>
 
+</form>
 
         <div class="login-mess-policy">Chúng tôi không sử dụng thông tin của bạn với bất kỳ mục đích nào. Bằng cách đăng
           nhập hoặc đăng ký, bạn đồng ý với <a
