--- a/src/app/merchant/merchant-page/merchant-page.component.html
+++ b/src/app/merchant/merchant-page/merchant-page.component.html
@@ -43,7 +43,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content"><span class="close" data-dismiss="modal">x</span>
         <div class="img-now"><img
-          src="/app/assets/img/img-new-app.png?2aafe2fa0d470c0d2fadada01c56a448"
+          src="#"
           alt="App now"></div>
         <div class="info-now"><span>
                                     <h3 style="font-size: 36px;font-weight: lighter;margin-bottom: 0;">Hello you!</h3>
