--- a/src/app/merchant/product-list/product-list.component.html
+++ b/src/app/merchant/product-list/product-list.component.html
@@ -2,31 +2,30 @@
   <table class="table table-striped table-sm">
     <thead>
     <tr>
-      <th scope="col">id</th>
-      <th scope="col">Avatar</th>
+      <th scope="col">Id</th>
+      <th scope="col">Image</th>
       <th scope="col">Name</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Address</th>
-      <th scope="col">OpenTime</th>
-      <th scope="col">CloseTime</th>
+      <th scope="col">New price/th>
+      <th scope="col">Old price</th>
+      <th scope="col">Number oder</th>
+      <th scope="col">Short description</th>
       <th scope="col" colspan="2">Action</th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let product of products">
-      <td>{{product.id}}</td>
+    <tr *ngFor="let product of products; index as i">
+      <td>{{i+1}}</td>
       <td><img src="{{product.image}}" alt="" style="height: 40px;
     width: 40px;
     border-radius: 50%;"></td>
       <td class="merchant-item">{{product.name}}</td>
-      <td class="merchant-item">{{product.shortDecription}}</td>
       <td class="merchant-item">{{product.newPrice}}</td>
       <td class="merchant-item">{{product.oldPrice}}</td>
       <td class="merchant-item">{{product.numberOrder}}</td>
-      <td class="action-icon"><a href="#"><i class="fa-regular fa-pen-to-square"></i></a></td>
-      <td class="action-icon"><a href="#"><i class="fa-solid fa-trash"></i></a></td>
+      <td class="merchant-item">{{product.shortDecription}}</td>
+      <td class="action-icon"><a [routerLink]="['/merchant/edit',product.id]"><i class="fa-regular fa-pen-to-square"></i></a></td>
+      <td class="action-icon"><a (click)="deleteProduct(i,product.id)"><i class="fa-solid fa-trash"></i></a></td>
     </tr>
-
     </tbody>
   </table>
 </div>
