--- a/src/app/merchant/product-list/product-list.component.html
+++ b/src/app/merchant/product-list/product-list.component.html
@@ -1,15 +1,22 @@
+<button type="button" class="btn btn-outline-danger" routerLink='/merchant/product-create'>
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+  </svg>
+  Thêm sản phẩm
+</button>
 <div class="table-responsive">
   <table class="table table-striped table-sm">
     <thead>
     <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Image</th>
-      <th scope="col">Name</th>
-      <th scope="col">New price/th>
-      <th scope="col">Old price</th>
-      <th scope="col">Number oder</th>
-      <th scope="col">Short description</th>
-      <th scope="col" colspan="2">Action</th>
+      <th scope="col">Stt</th>
+      <th scope="col">Ảnh</th>
+      <th scope="col">Tên</th>
+      <th scope="col">Giá mới</th>
+      <th scope="col">Giá cũ</th>
+      <th scope="col">Số lượng bán</th>
+      <th scope="col">Mô tả</th>
+      <th scope="col" colspan="2">Hành động</th>
     </tr>
     </thead>
     <tbody>
@@ -23,8 +30,8 @@
       <td class="merchant-item">{{product.oldPrice}}</td>
       <td class="merchant-item">{{product.numberOrder}}</td>
       <td class="merchant-item">{{product.shortDecription}}</td>
-      <td class="action-icon"><a [routerLink]="['/merchant/edit',product.id]"><i class="fa-regular fa-pen-to-square"></i></a></td>
-      <td class="action-icon"><a (click)="deleteProduct(i,product.id)"><i class="fa-solid fa-trash"></i></a></td>
+      <td ><a [routerLink]="['/merchant/product-edit',product.id]"><i class="fa-regular fa-pen-to-square action-icon"></i></a></td>
+      <td ><a (click)="deleteProduct(i,product.id)"><i class="fa-solid fa-trash action-icon"></i></a></td>
     </tr>
     </tbody>
   </table>
