--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -222,7 +222,7 @@
         <div class="form-login-input">
           <div class="field-group">
             <div class="input-group"><i class="far fa-envelope"></i><input class="input100" id="username" type="text" name="username" placeholder="username"
-                                                                           formControlName="userName">
+                                                                           formControlName="username">
               <!--          <div class="wrap-input100 validate-input">-->
               <!--            <input class="input100" id="username" type="text" name="username" placeholder="username"-->
               <!--                   formControlName="username">-->
