done crud ui pro

--- a/src/app/homepage/all-product-list/all-product-list.component.html
+++ b/src/app/homepage/all-product-list/all-product-list.component.html
@@ -7,7 +7,7 @@
         <div class="info-basic-res"><h4 class="name-res" title="McDonald's - Hồ Gươm"><span
           class="icon icon-quality-merchant"
           title="Đây là 1 trong những Merchants được đánh giá cao trong ShopeeFood"></span>{{product.name}}</h4>
-          <div class="address-res" title="2 Hàng Bài, P. Tràng Tiền, Hoàn Kiếm, Hà Nội">{{product.shortDecription}}
+          <div class="address-res" title="2 Hàng Bài, P. Tràng Tiền, Hoàn Kiếm, Hà Nội">{{product.shortDescription}}
           </div>
         </div>
         <p class="kind-restaurant"> Nhà hàng</p>
