--- a/src/app/merchant/product-list/product-list.component.html
+++ b/src/app/merchant/product-list/product-list.component.html
@@ -29,7 +29,7 @@
       <td class="merchant-item">{{product.newPrice}}</td>
       <td class="merchant-item">{{product.oldPrice}}</td>
       <td class="merchant-item">{{product.numberOrder}}</td>
-      <td class="merchant-item">{{product.shortDecription}}</td>
+      <td class="merchant-item">{{product.shortDescription}}</td>
       <td ><a [routerLink]="['/merchant/product-edit',product.id]"><i class="fa-regular fa-pen-to-square action-icon"></i></a></td>
       <td ><a (click)="deleteProduct(i,product.id)"><i class="fa-solid fa-trash action-icon"></i></a></td>
     </tr>
