--- a/src/app/merchant/merchant-page/merchant-page.component.css
+++ b/src/app/merchant/merchant-page/merchant-page.component.css
@@ -35,6 +35,16 @@ html {
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
+.selected{
+  color: white;
+  background: #d51c1c;
+  border-radius: 17px;
+}
+nav a {
+  display: inline-block;
+  padding: 5px;
+  margin-right: 5px;
+}
 
 @-ms-viewport {
 }
