--- a/src/app/merchant/merchant-page/merchant-page.component.html
+++ b/src/app/merchant/merchant-page/merchant-page.component.html
@@ -123,25 +123,25 @@
       <div class="position-sticky pt-3 sidebar-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" routerLink="mercha" routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}">
               <span data-feather="home" class="align-text-bottom"></span>
               Dashboard
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="merchant-list">
+            <a class="nav-link" routerLink="merchant-list" routerLinkActive="selected">
               <span data-feather="file" class="align-text-bottom"></span>
               Quản lý đơn hàng
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="product-list">
+            <a class="nav-link" routerLink="product-list" routerLinkActive="selected">
               <span data-feather="shopping-cart" class="align-text-bottom"></span>
               Quản lý sản phẩm
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="product" routerLinkActive="selected">
               <span data-feather="users" class="align-text-bottom"></span>
               Quản lý đơn vị vận chuyển
             </a>
