--- a/src/app/merchant/product-list/product-list.component.html
+++ b/src/app/merchant/product-list/product-list.component.html
@@ -1,10 +1,20 @@
-<div class="container"><button type="button" class="btn btn-outline-danger" routerLink='/merchant/product-create'>
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
-  </svg>
-  Thêm sản phẩm
-</button>
+
+<div class="container">
+  <div class="row" >
+    <button type="button" class="col-2 btn btn-outline-danger" routerLink='/merchant/product-create'>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+      </svg>
+      Thêm sản phẩm
+    </button>
+    <form method="get" class="col-2 " role="search" style="width: 17% ; margin-left: 700px">
+      <input type="search" class="form-control" placeholder="Search..." aria-label="Search" name="name" (input)="search()" [(ngModel)]="nameSearch">
+<!--      <button type=""-->
+    </form>
+  </div>
+
+
 <div class="table-responsive">
   <table class="table table-striped table-sm">
     <thead>
