--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -1,6 +1,3 @@
-<!--<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZSQTX3" height="0" width="0"-->
-<!--                  style="display:none;visibility:hidden"></iframe></noscript>-->
-<!-- End Google Tag Manager (noscript) -->
 
 <div id="app">
   <div class="wrapper">
@@ -49,12 +46,47 @@
                   class="font14">&nbsp;&nbsp;Tiếng Việt</span></div>
               </div>
             </div>
-            <div class="user-acc col-auto">
-              <a class="user-acc-admin" routerLink="/admin">Kênh admin</a>
-              <a class="user-acc-admin" routerLink="/merchant">Kênh người bán</a>
-              <a routerLink="/login"><button type="button"  class="btn btn-none-bg btn-login">
-                <span class="font14">Đăng nhập</span>
-              </button></a>
+            <div class="user-acc col-auto user-acc-wr">
+              <div *ngIf="message === 'chua dang nhap'; then thenBlockAcc else elseBlockAcc"></div>
+              <ng-template #thenBlockAcc>
+                <a routerLink="/login"><button type="button"  class="btn btn-none-bg btn-login">
+                  <span class="font14">Đăng nhập</span>
+                </button></a>
+              </ng-template>
+
+              <ng-template #elseBlockAcc>
+
+
+                <div class="user-acc-contain">
+                  <img class="user-acc-img" src="{{acc.avatar}}" alt="">
+                  <span>{{acc.name}}</span>
+                  <div class="user-acc-dropdown">
+
+                    <div *ngIf="message == 'merchant'; then thenBlockMerchant else elseBlockMerchant"></div>
+                    <ng-template #thenBlockMerchant>
+                      <a class="user-acc-admin" routerLink="/merchant"><i class="fa-solid fa-store"></i> Kênh người bán</a>
+                    </ng-template>
+                    <ng-template #elseBlockMerchant>
+                      <a class="user-acc-admin" routerLink="/merchant"><i class="fa-solid fa-user-plus"></i> Đăng ký người bán</a>
+                    </ng-template>
+
+                    <div *ngIf="message == 'admin'; then thenBlockAdmin"></div>
+                    <ng-template #thenBlockAdmin>
+                      <a class="user-acc-admin" routerLink="/admin"> <i class="fa-solid fa-lock"></i> Kênh admin</a>
+                    </ng-template>
+
+                    <hr>
+                    <span (click)="logout()"><i class="fa-solid fa-right-to-bracket"></i> Đăng xuất</span>
+                  </div>
+
+
+
+                </div>
+
+
+              </ng-template>
+
+
             </div>
           </div>
         </div>
@@ -83,7 +115,7 @@
                                         its name to</p><span class="btn btn-red font18" title="ShopeeFood"
                                                              style="cursor: pointer;font-size: 18px !important;background-color: #cf2127;color: #fff;border-color: #cf2127;"><span
               class="txt-bold"
-              style="font-weight: 700 !important;">ShopeeFood</span></span>
+              style="font-weight: 700 !important;">ShopBeaFood</span></span>
                                 </span>
               <p class="update-version">Cập nhật phiên bản mới</p>
               <div class="down-apps"><a target="_blank" rel="noopener noreferrer"
