--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -216,7 +216,7 @@
         <form class="login100-form validate-form" [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form-login-input">
           <div class="field-group">
-            <div class="input-group"><i class="far fa-envelope"></i><input class="input100" id="userName" type="text" name="userName" placeholder="userName"
+            <div class="input-group"><i class="far fa-envelope"></i><input class="input100" id="userName" type="text" name="userName" placeholder="Tên đăng nhập"
                                                                            formControlName="userName">
 
 
@@ -235,7 +235,7 @@
               </div>
             </div>
 
-            <div class="input-group"><i class="fas fa-lock"></i><input class="input100" type="password" name="password" placeholder="Password" formControlName="password"></div>
+            <div class="input-group"><i class="fas fa-lock"></i><input class="input100" type="password" name="password" placeholder="Mật khẩu" formControlName="password"></div>
 <!--              valid-->
               <div *ngIf="!password?.valid && password?.touched">
                 <div [hidden]="!password?.errors?.['required']">
