--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -218,7 +218,7 @@
         <div class="form-login-input">
           <div class="field-group">
             <div class="input-group"><i class="far fa-envelope"></i><input type="text"
-                                                                           placeholder="Tên đăng nhập hoặc Email" value=""></div>
+                                                                           placeholder="Tên đăng nhập" value=""></div>
             <div class="input-group"><i class="fas fa-lock"></i><input type="password" placeholder="Mật khẩu"
                                                                        value=""></div>
           </div>
@@ -226,7 +226,7 @@
             <div class="float-left"><input type="checkbox" id="RememberMe" checked=""><label for="RememberMe">Lưu
               thông tin đăng nhập</label></div><span class="float-right"><a href="/forgotPassword">Quên mật
                                     khẩu?</a></span>
-          </div><button class="btn btn-block btn-submit">Đăng nhập</button>
+          </div><button class="btn btn-block btn-submit">Đăng ký</button>
         </div><br>
         <div class="login-mess-policy">Chúng tôi không sử dụng thông tin của bạn với bất kỳ mục đích nào. Bằng cách đăng
           nhập hoặc đăng ký, bạn đồng ý với <a
