--- a/src/app/homepage/all-merchant-list/all-merchant-list.component.html
+++ b/src/app/homepage/all-merchant-list/all-merchant-list.component.html
@@ -1,20 +1,28 @@
-<div class="now-list-restaurant" >
-  <div class="list-restaurant" >
-    <div class="item-restaurant" *ngFor="let merchant of merchants"><a class="item-content" routerLink="chi-tiet-san-pham/+{{merchant.id}}">
-      <div class="img-restaurant"><img
-        src="{{merchant.avatar}}" class=""></div>
-      <div class="info-restaurant">
-        <div class="info-basic-res"><h4 class="name-res" title="McDonald's - Hồ Gươm"><span
-          class="icon icon-quality-merchant"
-          title=""></span>{{merchant.name}}</h4>
-          <div class="address-res" title="">{{merchant.address}}
+<div *ngIf="url == '/home/list-merchant'; then thenBlock else elseBlock"></div>
+<ng-template #thenBlock>
+  <div class="now-list-restaurant" >
+    <div class="list-restaurant" >
+      <div class="item-restaurant" *ngFor="let merchant of merchants" >
+        <a class="item-content" [routerLink]="['merchant-detail',merchant.id]">
+          <div class="img-restaurant"><img
+            src="{{merchant.avatar}}" class=""></div>
+          <div class="info-restaurant">
+            <div class="info-basic-res"><h4 class="name-res" title="McDonald's - Hồ Gươm"><span
+              class="icon icon-quality-merchant"
+              title=""></span>{{merchant.name}}</h4>
+              <div class="address-res" title="">{{merchant.address}}
+              </div>
+            </div>
+            <p class="kind-restaurant"> Nhà hàng</p>
+            <div class="opentime-status"><span class="stt online" title="Mở cửa"
+                                               style="color: rgb(35, 152, 57); background-color: rgb(35, 152, 57);"></span>
+            </div>
           </div>
-        </div>
-        <p class="kind-restaurant"> Nhà hàng</p>
-        <div class="opentime-status"><span class="stt online" title="Mở cửa"
-                                           style="color: rgb(35, 152, 57); background-color: rgb(35, 152, 57);"></span>
-        </div>
+        </a>
       </div>
-    </a></div>
+    </div>
   </div>
-</div>
+</ng-template>
+<ng-template #elseBlock>
+  <router-outlet></router-outlet>
+</ng-template>
