--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -56,7 +56,6 @@
 
               <ng-template #elseBlockAcc>
 
-
                 <div class="user-acc-contain">
                   <img class="user-acc-img" src="{{acc.avatar}}" alt="">
                   <span>{{acc.name}}</span>
@@ -83,7 +82,7 @@
 
                 </div>
 
-
+                <div class="nav-bar-cart"><i class="fa-solid fa-cart-shopping"></i></div>
               </ng-template>
 
 
